--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./build/ios/archive/Runner.ipa
-        asset_name: app-release.ipa
-        asset_content_type: application/octet-stream
+        asset_path: ./build/ios/iphonesimulator/Runner.app
+        asset_name: Runner-iOS.zip
+        asset_content_type: application/zip
