--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,11 +121,9 @@ jobs:
         prerelease: false
         
     - name: Zip and Upload Windows Build
-      uses: montudor/action-zip@v2
-      with:
-        files: |
-          ./build/windows/x64/runner/Release/*
-        dest: 'app-release-windows.zip'   
+      run: |
+        cd ./build/windows/x64/runner/Release
+        zip -r ../../../../../../app-release-windows.zip .
         
     - name: Upload Windows Build
       id: upload_windows_release_asset 
@@ -151,6 +149,7 @@ jobs:
         sudo apt install ninja-build
         sudo apt install cmake
         sudo apt install g++
+        sudo apt install libgtk-3-dev
         
      - name: Setup Flutter
        uses: subosito/flutter-action@v2
