--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,9 +121,8 @@ jobs:
         prerelease: false
         
     - name: Zip and Upload Windows Build
-      run: |
-        cd ./build/windows/x64/runner/Release
-        zip -r ../../../../../../app-release-windows.zip .
+      run:  Compress-Archive -Path ./build/windows/x64/runner/Release/* -DestinationPath app-release-windows.zip -Force
+
         
     - name: Upload Windows Build
       id: upload_windows_release_asset 
